# iogx

./: .gitignore  CHANGELOG.md  MANUAL.md  README.md  bump-downstream.sh  flake.nix  manage.sh  script.sh
.github/workflows/: deploy-haskell-project-devcontainer.yaml  update-flake-lock.yaml
doc/: adr-1.md  adr-2.md  adr.md  api.md  jira-cli-cheatsheet.md  nix-setup-guide.md  options.md  saveme.md
doc/adr/: 02-release-tool.md
ext/antaeus/: README.md  mkFlake.nix
ext/marconi/: mkFlake.nix
ext/marlowe-cardano/: mkFlake.nix
plutus-tx-template/: .gitignore  README.md  cabal.project  plutus-tx-template.cabal
plutus-tx-template/.devcontainer/: devcontainer.json
plutus-tx-template/app/: AuctionValidator.hs  Main.hs
plutus-tx-template/nix/: devcontainer-docker-image.nix  outputs.nix  push-devcontainer-docker-image.nix  shell.nix
sc-repos/antaeus/: flake.nix  mkFlake.nix
sc-repos/marconi/: flake.nix  mkFlake.nix
sc-repos/marlowe-cardano/: flake.nix  mkFlake.nix
sc-repos/quickcheck-dynamic/: flake.nix  mkFlake.nix
scripts/: bump-iogx-everywhere.sh  find-repos-that-use-iogx.sh  insert-template-comments.py  push-haskell-project-devcontainer.sh  render-iogx-api-reference.sh
src/: autobuild-readthedocs-site.nix  build-readthedocs-site.nix  cabal-fmt.nix  cabal-install-3.6.2.0.nix  cabal-install-3.8.1.0.nix  fix-cabal-fmt.nix  fix-png-optimization.nix  fix-prettier.nix  fix-stylish-haskell.nix  get-haskell-tool.nix  ghc.nix  haskell-language-server-project-1.3.0.0.nix  haskell-language-server-project-1.9.0.0.nix  haskell-language-server-wrapper.nix  haskell-language-server.nix  haskell-project-flake.nix  haskell-project-shell.nix  haskell-project.nix  hie-bios.nix  hlint.nix  iogx-base-toolchain.nix  iogx-configure-hydra-jobs.nix  iogx-devshells.nix  iogx-haskell-project-flake.nix  iogx-haskell-toolchain.nix  iogx-make-flake.nix  iogx-merge-inputs.nix  iogx-pkgs.nix  iogx-validate-config.nix  lib.nix  libsodium-vrf-overlay.nix  main.nix  mkFlake.nix  nixpkgs-fmt.nix  pre-commit-check.nix  read-the-docs-site.nix  scriv.nix  sphinx-markdown-tables.nix  sphinx-toolchain.nix  sphinxcontrib-bibtex.nix  (+4 more)
src/boot/: modularise.nix  options.nix  utils.nix
src/bootstrap/: l.nix  (+11 more)
template/: flake.nix
templates/haskell/my-project/: my-project.cabal
templates/haskell/my-project/app/: App.hs  Exec.hs
templates/haskell/my-project/bench/: Bench.hs
templates/haskell/my-project/lib/: Lib.hs
templates/haskell/my-project/test/: Test.hs
tests/: default.nix  flakeopts-schema-tests.nix  main.nix
tests/core/repo/bar/: bar.cabal
tests/core/repo/bar/src/: Lib.hs
tests/core/repo/foo/: foo.cabal
testsuite/: main.nix
testsuite/repo/foo/: foo.cabal
(+265 files in other folders)
