cabal-version: 3.4
name:          my-project
version:       0.1.0.0
license:       Apache-2.0
build-type:    Simple

library
  hs-source-dirs:  lib
  exposed-modules: Lib
  build-depends:
    , base                         >=4.9   && <5

executable exec
  main-is:        App.hs
  hs-source-dirs: app
  build-depends:
    , base                     >=4.9   && <5
    , my-project

benchmark bench
  type:           exitcode-stdio-1.0
  main-is:        Bench.hs
  hs-source-dirs: bench
  build-depends:
    , base >=4.9     && <5
    , my-project

test-suite test
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  hs-source-dirs: test
  build-depends:
    , base >=4.9     && <5
    , my-project
 