cabal-version: 2.2
name: bar
version: 3.1.1

library
  hs-source-dirs: src
  build-depends: base   
  exposed-modules: Lib

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: src
  build-depends: base  

executable exe
  hs-source-dirs: src 
  main-is: Exe.hs
  build-depends: base  

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  hs-source-dirs: src
  build-depends: base  
